--- a/css/_nav-functionality.scss
+++ b/css/_nav-functionality.scss
@@ -1,12 +1,3 @@
-$opened_width: 250px; //width of sidenav in opened state
-$closed_width: 100px; //width of sidenav in closed state
-$navbar_height: 50px; //height of navbar in mobile design
-
-//type of transition for sliding, check for different options at http://easings.net
-$transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-
-
-
 
 //
 // mobile-first: no visible closed sidebar, instead visible navbar
@@ -62,7 +53,7 @@ $transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 // additional parameters for devices wider than $bp-medium
 //
 
-@media only screen and (min-width: $bp-large) {
+@media only screen and (min-width: $bp-medium) {
 
   #topnav, #topnav-container {
     //hide navbar again
@@ -97,12 +88,6 @@ $transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 
     //also reset padding-top to nothing, as there is no navbar to be accomodated
     padding-top: 0;
-  }
-
-
-  .content {
-    //recenter content columns which were translated by $closed_width together with #main
-    transform: translate3d(-$closed_width,0,0);
   }
 
 }
