--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,13 @@ $bp-large: 768px;
 $bp-medium: 600px;
 
 
+$opened_width: 250px; //width of sidenav in opened state
+$closed_width: 100px; //width of sidenav in closed state
+$navbar_height: 50px; //height of navbar in mobile design
+
+//type of transition for sliding, check for different options at http://easings.net
+$transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+
 $ct-gray: #2b2b2b;
 $ct-orange: rgba(229,107,46,1);
 $ct-blue: rgba(86,171,214,1);
